# PiFormer

./: .gitignore  .gitmodules  DESIGN.md  IDEA.md  PSEUDOCODE.md  README.md  benchmark.py  demo.sh  plan.txt
paper/: PRIMEarxiv.sty  final.aux  final.bbl  final.blg  final.fdb_latexmk  final.fls  final.out  final.tex  progress.aux  progress.bbl  progress.blg  progress.fdb_latexmk  progress.fls  progress.out  progress.tex  ref.bib
prover/: Cargo.toml
prover/src/: field.rs  lib.rs  pipeline.rs  prover.rs  setup.rs  transcript.rs  verifier.rs
prover/src/attention/: attention.rs  layernorm.rs  linear.rs  mod.rs  projection.rs  ternary_check.rs
prover/src/cross_layer/: projection.rs
prover/src/ffn/: ffn.rs  mod.rs
prover/src/lookup/: inv_sqrt.rs  lasso.rs  mod.rs  quantization.rs  range.rs
prover/src/pcs/: mod.rs
prover/src/poly/: dense.rs  mod.rs  utils.rs
prover/src/subprotocols/: combine.rs  mod.rs  sumcheck.rs
python/: train.py  train_demo.py
python/benchmark/: README.md  baseline.py  classify.py  data.py  plot.py  run_compare.py
python/piformer/: __init__.py  activation.py  attention.py  export.py  model.py  projection.py  quant.py  witness.py
slide/: settings.tex  slide.aux  slide.blg  slide.fdb_latexmk  slide.fls  slide.run.xml  slide.tex
