[package]
name = "piformer-prover"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "example"
path = "src/bin/example.rs"

[dependencies]
ark-ff      = "0.4"
ark-bn254   = "0.4"
ark-ec      = "0.4"
ark-serialize = { version = "0.4", features = ["derive"] }
ark-std     = "0.4"
sha3        = "0.10"
rand        = "0.8"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"

[dev-dependencies]
rand = "0.8"
