[package]
name = "piformer-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff      = { version = "0.4", features = ["parallel"] }
ark-bn254   = "0.4"
ark-ec      = { version = "0.4", features = ["parallel"] }
ark-serialize = { version = "0.4", features = ["derive"] }
ark-std     = { version = "0.4", features = ["parallel"] }
sha3        = "0.10"
rand        = "0.8"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
clap        = { version = "4", features = ["derive"] }
json = "0.12.4"
itertools = "0.14.0"
rayon = "1"

[dev-dependencies]
rand = "0.8"

[[bin]]
name = "piformer"
path = "src/bin/piformer.rs"

[features]
default = []
